# megaMekFileParser

./: failed.txt  main.py  mongoimport.py  pyproject.toml  requirements.txt  test.py
MegaMechFileParser/: mechparser.py
MegaMechFileParser/utils/: armor_config.py  equipment_locations.py
mechs/3039u/: Archer ARC-2K.mtf  Archer ARC-2R.mtf  Archer ARC-2S.mtf  Archer ARC-2W.mtf  Assassin ASN-101.mtf  Assassin ASN-21.mtf  Atlas AS7-D-DC.mtf  Atlas AS7-D.mtf  Atlas AS7-RS.mtf  Awesome AWS-8Q.mtf  Awesome AWS-8R.mtf  Awesome AWS-8T.mtf  Awesome AWS-8V.mtf  Banshee BNC-3E.mtf  Banshee BNC-3M.mtf  Banshee BNC-3MC.mtf  Banshee BNC-3Q.mtf  Banshee BNC-3S Reinesblatt.mtf  Banshee BNC-3S.mtf  BattleMaster BLR-1D.mtf  BattleMaster BLR-1G-DC.mtf  BattleMaster BLR-1G.mtf  BattleMaster BLR-1S.mtf  Black Knight BL-7-KNT-L.mtf  Black Knight BL-7-KNT.mtf  Blackjack BJ-1.mtf  Blackjack BJ-1DB.mtf  Blackjack BJ-1DC.mtf  Blackjack BJ-1X.mtf  Bombardier BMB-10D.mtf  Cataphract CTF-1X.mtf  Cataphract CTF-2X.mtf  Catapult CPLT-A1.mtf  Catapult CPLT-C1 Jenny.mtf  Catapult CPLT-C1.mtf  Catapult CPLT-C1b.mtf  Catapult CPLT-C4.mtf  Catapult CPLT-K2.mtf  Centurion CN9-A.mtf  Centurion CN9-AH.mtf  (+184 more)
mechs/3050U/: Annihilator ANH-1A.mtf  Annihilator ANH-2A.mtf  Annihilator ANH-3A.mtf  Annihilator ANH-4A.mtf  Annihilator C.mtf  Assassin ASN-23.mtf  Assassin ASN-30.mtf  Assassin ASN-99.mtf  Atlas AS7-C.mtf  Atlas AS7-CM.mtf  Atlas AS7-K.mtf  Atlas AS7-S.mtf  Atlas AS7-S2.mtf  Awesome AWS-10KM.mtf  Awesome AWS-9M.mtf  (+311 more)
static/: distinct weapons list.csv  failed.txt
tests/: createJsonScript.py
(+2122 files in other folders)
