[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ['src/megamekfileparser']

[project]
name = "megamekfileparser"
version = "0.6.0"
authors = [
  { name="Christopher Gerrish", email="chris.gerrish@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChrisAddamGerrish/mmparser"
Issues = "https://github.com/ChrisAddamGerrish/mmparser/issues"